# rlm-cli

./: .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  install.sh  pyproject.toml  rlm.yaml  test_docs_v2.py  test_from_docs.py  test_pageindex_integration.py  test_pageindex_pdf.py  test_pi_tool.py  uninstall.sh
.beads/: beads.jsonl  issues.jsonl
.beads/.br_history/: issues.20260121_202058.jsonl
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  gitleaks.yml
skills/rlm/: SKILL.md
src/rlm_cli/: __init__.py  __main__.py  cli.py  config.py  context.py  doctor.py  errors.py  indexer.py  inputs.py  models.py  output.py  rlm_adapter.py  schema.py  spec.py  tools_pageindex.py  tools_search.py
tests/: e2e_test_sub_response_display.py  test_budget_exceeded.py  test_cli_search.py  test_cli_sub_responses.py  test_config_commands.py  test_context_bytes.py  test_depth_3_e2e.py  test_dir_loader.py  test_early_exit.py  test_errors.py  test_execution_tree.py  test_gitignore.py  test_help_snapshot.py  test_indexer.py  test_integration_complete.py  test_json_output.py  test_markitdown.py  test_max_budget.py  test_max_depth_2.py  test_models.py  test_tools_search.py
tests/fixtures/gitignore_repo/: .gitignore  keep.py
