[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-cli"
version = "0.0.0"
description = "RLM CLI"
requires-python = ">=3.9"
dependencies = [
  "pathspec",
  "markitdown",
  "pyyaml",
  "rlm @ git+https://github.com/alexzhang13/rlm.git",
  "typer",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
  "types-PyYAML",
]
rich = ["rich"]
search = ["tantivy>=0.22.0"]

[project.scripts]
rlm = "rlm_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
markers = [
  "integration: integration tests",
]
